--- a/src/assets/scss/layout/_main-sidebar.scss
+++ b/src/assets/scss/layout/_main-sidebar.scss
@@ -2,12 +2,290 @@
   width: 15em;
   height: 100vh;
   transition: .4s;
-  padding-top: 4em;
   position: fixed;
   left: 0;
   top:0;
-  background-color: $sidenav-light-bg;
-  &.is-closed {
-    transform: translateX(-16em);
+  background-color: $sidebar-light-bg;
+    .sidebar-closed & {
+      transform: translateX(-$sidebar-base-width + 70);
+    }
+
+  .sidebar-header {
+    background: $sidebar-light-bg;
+    height: $topnav-base-height;
+    display: flex;
+    display: webkit-flex;
+    border-bottom: 1px solid $sidebar-light-border-color;
+    padding: 0 25px;
+    justify-content:space-between;
+    -webkit-align-items: center;
+    align-items: center;
+    border-right: 1px solid $sidebar-light-border-color;
+    z-index: 999;
+    width: 100%;
+    -webkit-transition: width .1s ease;
+    transition: width .1s ease;
+
+
+  
+    .sidebar-brand {
+      opacity: 1;
+      visibility: visible;
+      -webkit-transition: opacity .5s ease;
+      transition: opacity .5s ease;
+      font-weight: 900;
+      font-size: 25px;
+      line-height: 19px;
+      letter-spacing: -1px;
+      color: #031a61;
+      span {
+        color: theme-color(primary);
+        font-weight: 300;
+      }
+    }
+    .sidebar-toggler {
+      cursor: pointer;
+      width: 18px;
+      span {
+        display: block;
+        width: 100%;
+        border-radius: 3px;
+        height: 2px;
+        background: #535353;
+        -webkit-transition: all .3s;
+        transition: all .3s;
+        position: relative;
+      }
+      
+      span + span {
+        margin-top: 4px;
+      }
+      
+      &.active span:nth-child(1) {
+        -webkit-animation: ease .6s top forwards;
+                animation: ease .6s top forwards;
+      }
+      
+      &.not-active span:nth-child(1) {
+        -webkit-animation: ease .6s top-2 forwards;
+                animation: ease .6s top-2 forwards;
+      }
+      
+      &.active span:nth-child(2) {
+        -webkit-animation: ease .6s scaled forwards;
+                animation: ease .6s scaled forwards;
+      }
+      
+      &.not-active span:nth-child(2) {
+        -webkit-animation: ease .6s scaled-2 forwards;
+                animation: ease .6s scaled-2 forwards;
+      }
+      
+      &.active span:nth-child(3) {
+        -webkit-animation: ease .6s bottom forwards;
+                animation: ease .6s bottom forwards;
+      }
+      
+      &.not-active span:nth-child(3) {
+        -webkit-animation: ease .6s bottom-2 forwards;
+                animation: ease .6s bottom-2 forwards;
+      }
+      
+      @-webkit-keyframes top {
+        0% {
+          top: 0;
+          -webkit-transform: rotate(0);
+                  transform: rotate(0);
+        }
+        50% {
+          top: 6px;
+          -webkit-transform: rotate(0);
+                  transform: rotate(0);
+        }
+        100% {
+          top: 6px;
+          -webkit-transform: rotate(45deg);
+                  transform: rotate(45deg);
+        }
+      }
+      
+      @keyframes top {
+        0% {
+          top: 0;
+          -webkit-transform: rotate(0);
+                  transform: rotate(0);
+        }
+        50% {
+          top: 6px;
+          -webkit-transform: rotate(0);
+                  transform: rotate(0);
+        }
+        100% {
+          top: 6px;
+          -webkit-transform: rotate(45deg);
+                  transform: rotate(45deg);
+        }
+      }
+      
+      @-webkit-keyframes top-2 {
+        0% {
+          top: 6px;
+          -webkit-transform: rotate(45deg);
+                  transform: rotate(45deg);
+        }
+        50% {
+          top: 6px;
+          -webkit-transform: rotate(0deg);
+                  transform: rotate(0deg);
+        }
+        100% {
+          top: 0;
+          -webkit-transform: rotate(0deg);
+                  transform: rotate(0deg);
+        }
+      }
+      
+      @keyframes top-2 {
+        0% {
+          top: 6px;
+          -webkit-transform: rotate(45deg);
+                  transform: rotate(45deg);
+        }
+        50% {
+          top: 6px;
+          -webkit-transform: rotate(0deg);
+                  transform: rotate(0deg);
+        }
+        100% {
+          top: 0;
+          -webkit-transform: rotate(0deg);
+                  transform: rotate(0deg);
+        }
+      }
+      
+      @-webkit-keyframes bottom {
+        0% {
+          bottom: 0;
+          -webkit-transform: rotate(0);
+                  transform: rotate(0);
+        }
+        50% {
+          bottom: 6px;
+          -webkit-transform: rotate(0);
+                  transform: rotate(0);
+        }
+        100% {
+          bottom: 6px;
+          -webkit-transform: rotate(135deg);
+                  transform: rotate(135deg);
+        }
+      }
+      
+      @keyframes bottom {
+        0% {
+          bottom: 0;
+          -webkit-transform: rotate(0);
+                  transform: rotate(0);
+        }
+        50% {
+          bottom: 6px;
+          -webkit-transform: rotate(0);
+                  transform: rotate(0);
+        }
+        100% {
+          bottom: 6px;
+          -webkit-transform: rotate(135deg);
+                  transform: rotate(135deg);
+        }
+      }
+      
+      @-webkit-keyframes bottom-2 {
+        0% {
+          bottom: 6px;
+          -webkit-transform: rotate(135deg);
+                  transform: rotate(135deg);
+        }
+        50% {
+          bottom: 6px;
+          -webkit-transform: rotate(0);
+                  transform: rotate(0);
+        }
+        100% {
+          bottom: 0;
+          -webkit-transform: rotate(0);
+                  transform: rotate(0);
+        }
+      }
+      
+      @keyframes bottom-2 {
+        0% {
+          bottom: 6px;
+          -webkit-transform: rotate(135deg);
+                  transform: rotate(135deg);
+        }
+        50% {
+          bottom: 6px;
+          -webkit-transform: rotate(0);
+                  transform: rotate(0);
+        }
+        100% {
+          bottom: 0;
+          -webkit-transform: rotate(0);
+                  transform: rotate(0);
+        }
+      }
+      
+      @-webkit-keyframes scaled {
+        50% {
+          -webkit-transform: scale(0);
+                  transform: scale(0);
+        }
+        100% {
+          -webkit-transform: scale(0);
+                  transform: scale(0);
+        }
+      }
+      
+      @keyframes scaled {
+        50% {
+          -webkit-transform: scale(0);
+                  transform: scale(0);
+        }
+        100% {
+          -webkit-transform: scale(0);
+                  transform: scale(0);
+        }
+      }
+      
+      @-webkit-keyframes scaled-2 {
+        0% {
+          -webkit-transform: scale(0);
+                  transform: scale(0);
+        }
+        50% {
+          -webkit-transform: scale(0);
+                  transform: scale(0);
+        }
+        100% {
+          -webkit-transform: scale(1);
+                  transform: scale(1);
+        }
+      }
+      
+      @keyframes scaled-2 {
+        0% {
+          -webkit-transform: scale(0);
+                  transform: scale(0);
+        }
+        50% {
+          -webkit-transform: scale(0);
+                  transform: scale(0);
+        }
+        100% {
+          -webkit-transform: scale(1);
+                  transform: scale(1);
+        }
+      }
+    }
   }
-}	
+}
